tests/paczka1/small_fuzzy/65623251.err
Error in line 1: g84ly A381 62,5
Error in line 11: QhhvjRoZp A899 9,1
Error in line 7: LIQ A592 2,0
